Adding docker compose and containers

--- a/src/Services/User/User.API/appsettings.json
+++ b/src/Services/User/User.API/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "UsersConnectionString" : "'"
+    "UsersConnectionString": "Server=tcp:localhost;Database=UserDb;User Id=sa;Password=Kwakwa5!;"
   },
   "EmailSettings" : {
     "FromAddress" : "test@test.com",
