todos changes and docker compose

--- a/src/Services/User/User.API/appsettings.Development.json
+++ b/src/Services/User/User.API/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "UsersConnectionString": "Server=localhost;Database=UserDb;User Id=sa;Password=Kwakwa5!;TrustServerCertificate=True"
   }
 }
