--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -4,7 +4,7 @@ services:
   userdb:
     container_name: userdb
     environment:
-        MSSQL_SA_PASSWORD: "Kwakwa5!"
+        SA_PASSWORD: "Kwakwa5!"
         ACCEPT_EULA: "Y"
     restart: always
     ports:
@@ -14,11 +14,8 @@ services:
     container_name: user.api
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
-      - "ConnectionStrings:UsersConnectionString=Server=tcp:localhost;Database=UserDb;User Id=sa;Password=Kwakwa5!;"  
+      - "ConnectionStrings:UsersConnectionString=Server=userdb;Database=UserDb;User Id=sa;Password=Kwakwa5!"
     depends_on:
       - userdb
     ports:
-      - "8000:80"
-    volumes:
-      - ${APPDATA}/Microsoft/UserSecrets:/root/.microsoft/usersecrets:ro
-      - ${APPDATA}/ASP.NET/Https:/root/.aspnet/https:ro
+      - "8001:80"
