--- a/src/Services/User/User.API/appsettings.json
+++ b/src/Services/User/User.API/appsettings.json
@@ -2,11 +2,13 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Hangfire": "Information"
     }
   },
   "ConnectionStrings": {
-    "UsersConnectionString": "Server=localhost;Database=UserDb;User Id=sa;Password=Kwakwa5!;TrustServerCertificate=True"
+    "UsersConnectionString": "Server=localhost;Database=UserDb;User Id=sa;Password=Kwakwa5!;TrustServerCertificate=True",
+    "HangfireConnectionString": "hangfire.db"
   },
   "EmailSettings" : {
     "FromAddress" : "test@test.com",
