Adding solution to ci file

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,11 +16,11 @@ jobs:
       with:
         dotnet-version: 7.0.x
     - name: Restore dependencies
-      run: dotnet restore
+      run: dotnet restore Studonomic.sln
       working-directory: src 
     - name: Build
-      run: dotnet build --no-restore
+      run: dotnet build Studonomic.sln --no-restore
       working-directory: src 
     - name: Test
-      run: dotnet test --no-build --verbosity normal
+      run: dotnet test Studonomic.sln --no-build --verbosity normal
       working-directory: src 
